--- a/Test_Run.ipynb
+++ b/Test_Run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,12 +18,12 @@
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "#import json\n",
-    "#from selenium import webdriver\n",
-    "#from selenium.webdriver.chrome.service import Service\n",
-    "#from selenium.webdriver.common.by import By\n",
+    "import json\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.common.by import By\n",
     "import time\n",
-    "#import csv\n",
+    "import csv\n",
     "\n",
     "class HouseApartmentScraping:\n",
     "    def __init__(self, url):\n",
